add START message

--- a/Snake game/snake.html
+++ b/Snake game/snake.html
@@ -136,8 +136,14 @@
         <h1><u></u></h1>
         <h1 id="speed"></h1>
       </div>
+      <br>
+      <br><br><br><br><br><br><br>
+       <div style="text-align: center">
+       <h3>Press right arrow button to START</h3>
+    </div>
     </div> <!-- /end #gameControls -->
   </div> <!-- /end #mainWrapper -->
+
 
   <script src="snake.js"></script>
   
